crates/bayou_frontend/src/parser/snapshots/bayou_frontend__parser__tests__no_brace.snap
---
source: crates/bayou_frontend/src/parser/tests.rs
info: "func main() -> i64 { return 0;"
---
- items:
    - ParseError
- - expected: "`}`"
    span:
      start: 0
      end: 0

