crates/bayou_frontend/src/parser/snapshots/bayou_frontend__parser__tests__no_return_value.snap
---
source: crates/bayou_frontend/src/parser/tests.rs
info: "func main() { return; }"
---
- items:
    - FuncDecl:
        ident:
          node: 1
          span:
            start: 5
            end: 9
        ret_ty: Void
        block:
          statements:
            - Return:
                kind: Void
                span:
                  start: 14
                  end: 20
          final_expr:
            kind: Void
            span:
              start: 22
              end: 23
- []
