crates/bayou_frontend/src/parser/snapshots/bayou_frontend__parser__tests__return_integer.snap
---
source: crates/bayou_frontend/src/parser/tests.rs
info: "func main() -> i64 { return 0; }"
---
- items:
    - FuncDecl:
        ident:
          istr: 1
          span:
            start: 5
            end: 9
        ret_ty: I64
        block:
          statements:
            - Return:
                kind:
                  Integer: 0
                span:
                  start: 28
                  end: 29
          final_expr:
            kind: Void
            span:
              start: 31
              end: 32
- []
